@@ -34,8 +34,9 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i686-pc-linux-gnu
-host_triplet = i686-pc-linux-gnu
+build_triplet = i686-pc-cygwin
+host_triplet = i686-pc-cygwin
+LIBOBJDIR =
 bin_PROGRAMS = gpshell$(EXEEXT)
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(top_srcdir)/configure AUTHORS COPYING \
@@ -79,58 +80,58 @@ DIST_ARCHIVES = $(distdir).tar.gz
 GZIP_ENV = --best
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /home/widerstand/MuscleCard/GPShell/myaux/missing --run aclocal-1.9
+ACLOCAL = aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/widerstand/MuscleCard/GPShell/myaux/missing --run tar
-AUTOCONF = ${SHELL} /home/widerstand/MuscleCard/GPShell/myaux/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/widerstand/MuscleCard/GPShell/myaux/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/widerstand/MuscleCard/GPShell/myaux/missing --run automake-1.9
+AMTAR = tar
+AUTOCONF = autoconf
+AUTOHEADER = autoheader
+AUTOMAKE = automake-1.9
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
 CPP = gcc -E
 CPPFLAGS = 
-CYGPATH_W = echo
-DEFS = -DPACKAGE_NAME=\"GPShell\" -DPACKAGE_TARNAME=\"gpshell\" -DPACKAGE_VERSION=\"1.4.1\" -DPACKAGE_STRING=\"GPShell\ 1.4.1\" -DPACKAGE_BUGREPORT=\"snitmo@gmail.com\" -DPACKAGE=\"gpshell\" -DVERSION=\"1.4.1\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DLSTAT_FOLLOWS_SLASHED_SYMLINK=1 -DHAVE_STDLIB_H=1 -DHAVE_MALLOC=1 -DHAVE_ATOI=1 -DHAVE_FGETS=1 -DDEBUG=1 -DHAVE_LIBGLOBALPLATFORM=1
+CYGPATH_W = cygpath -w
+DEFS = -DPACKAGE_NAME=\"GPShell\" -DPACKAGE_TARNAME=\"gpshell\" -DPACKAGE_VERSION=\"1.4.2\" -DPACKAGE_STRING=\"GPShell\ 1.4.2\" -DPACKAGE_BUGREPORT=\"Karsten\ Ohme\ \<k_o_@users.sourceforge.net\>\ or\ snitmo@gmail.com\" -DPACKAGE=\"gpshell\" -DVERSION=\"1.4.2\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DLSTAT_FOLLOWS_SLASHED_SYMLINK=1 -DHAVE_STDLIB_H=1 -DHAVE_MALLOC=1 -DHAVE_ATOI=1 -DHAVE_FGETS=1 -DDEBUG=1
 DEPDIR = .deps
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
-EGREP = /bin/grep -E
-EXEEXT = 
-GLOBALPLATFORM_CFLAGS = 
-GLOBALPLATFORM_H_PATH = 
-GLOBALPLATFORM_LDFLAGS = 
-GLOBALPLATFORM_LIB_PATH = 
-GREP = /bin/grep
+EGREP = /usr/bin/grep -E
+EXEEXT = .exe
+GLOBALPLATFORM_CFLAGS = -I../GlobalPlatform/
+GLOBALPLATFORM_H_PATH = ../GlobalPlatform/
+GLOBALPLATFORM_LDFLAGS = -L../GlobalPlatform/Debug/
+GLOBALPLATFORM_LIB_PATH = ../GlobalPlatform/Debug/
+GREP = /usr/bin/grep
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
 LDFLAGS = 
 LIBOBJS = 
-LIBS = -lGlobalPlatform 
+LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/widerstand/MuscleCard/GPShell/myaux/missing --run makeinfo
+MAKEINFO = makeinfo
 OBJEXT = o
 PACKAGE = gpshell
-PACKAGE_BUGREPORT = snitmo@gmail.com
+PACKAGE_BUGREPORT = Karsten Ohme <k_o_@users.sourceforge.net> or snitmo@gmail.com
 PACKAGE_NAME = GPShell
-PACKAGE_STRING = GPShell 1.4.1
+PACKAGE_STRING = GPShell 1.4.2
 PACKAGE_TARNAME = gpshell
-PACKAGE_VERSION = 1.4.1
+PACKAGE_VERSION = 1.4.2
 PATH_SEPARATOR = :
-PCSCLITE_CFLAGS = -I/usr/include/PCSC  
-PCSCLITE_H_PATH = 
-PCSCLITE_LIBS = -lpcsclite  
-PKG_CONFIG = /usr/bin/pkg-config
+PCSCLITE_CFLAGS = -I./pcsclite-includes
+PCSCLITE_H_PATH = ./pcsclite-includes
+PCSCLITE_LIBS = -L/cygdrive/c/Program Files/Microsoft Platform SDK for Windows Server 2003 R2/Lib/
+PKG_CONFIG = 
 SET_MAKE = 
 SHELL = /bin/sh
 STRIP = 
-VERSION = 1.4.1
-WINSCARD_LIB_PATH = 
+VERSION = 1.4.2
+WINSCARD_LIB_PATH = /cygdrive/c/Program Files/Microsoft Platform SDK for Windows Server 2003 R2/Lib/
 ac_ct_CC = gcc
 am__fastdepCC_FALSE = #
 am__fastdepCC_TRUE = 
@@ -140,25 +141,25 @@ am__quote =
 am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 bindir = ${exec_prefix}/bin
-build = i686-pc-linux-gnu
+build = i686-pc-cygwin
 build_alias = 
 build_cpu = i686
-build_os = linux-gnu
+build_os = cygwin
 build_vendor = pc
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = i686-pc-linux-gnu
+host = i686-pc-cygwin
 host_alias = 
 host_cpu = i686
-host_os = linux-gnu
+host_os = cygwin
 host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = /home/widerstand/MuscleCard/GPShell/myaux/install-sh
+install_sh = /cygdrive/c/Users/widerstand_2/Documents/Visual Studio 2005/Projects/GPShell/myaux/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
