@@ -39,8 +39,12 @@
 			CAP file support is now default in examples
 			Compiled against GlobalPlatform 4.0.3
 			
-05/30/2007	1.4.1	
+08/22/2007	1.4.1	
 			Parameters for install_for_load added and fixed
 			ico file added
 
+09/06/2007	1.4.2	
+			Security Domain AID is automatically chosen based 
+			on AID given to the select command or default Card Manager /
+			Security Issuer Domain AID is chosen
 
